--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.password=root
 #\u5FC5\u987B\u8981\u4EE5 / \u5F00\u59CB
 mybatis.config-location=classpath:/mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:/mybatis/mapper/*.xml
+
+logging.level.com.roger.mybatis.mapper = debug
+
+spring.jackson.serialization.indent-output=true
